--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -446,6 +446,13 @@ a.secondary {
 /* Mobile View Adjustments */
 @media (max-width: 600px) {
   /* General page adjustments */
+  html,
+  body {
+    max-width: 100vw;
+    overflow-x: auto!important;
+    overflow-y: hidden;
+  }
+
   .page {
     padding: 32px;
     padding-bottom: 80px; /* Space for footer */
@@ -500,6 +507,10 @@ a.secondary {
     flex-direction: column;
     gap: 1vh;
     font-size: 2vh; /* Adjust text size for better readability */
+  }
+
+  .logoStatus a {
+    width: 100%!important;
   }
 
   .skills {
