--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -449,7 +449,7 @@ a.secondary {
   html,
   body {
     max-width: 100vw;
-    overflow-x: auto!important;
+    overflow-x: auto;
     overflow-y: hidden;
   }
 
